--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
 body{
     margin: 0px;
     padding: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.main-container{
+align-items: center;
+
 }
